# vaultcord

./: .gitignore  LICENSE  README.md  SECURITY.md  config.example.json  pyproject.toml
.github/workflows/: ci.yml
docs/: OPERATIONS.md
tests/: test_config.py  test_discord_api.py  test_scraper.py  test_security.py  test_service.py  test_storage.py  test_tui.py  test_worker.py
vaultcord/: cli.py  config.py  constants.py  discord_api.py  editor.py  logging_utils.py  models.py  runtime.py  scraper.py  security.py  service.py  sleep_inhibitor.py  storage.py  tui.py  tui.tcss  worker.py
