[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "vaultcord"
version = "0.1.0"
description = "Local-first Discord message vaulting and anonymization tool"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "VaultCord Contributors" }
]
keywords = ["discord", "privacy", "encryption", "prompt-toolkit", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security :: Cryptography"
]
dependencies = [
  "cryptography>=43.0.0",
  "discord.py>=2.5.0",
  "httpx>=0.27.0",
  "prompt_toolkit>=3.0.50",
  "typer>=0.12.5",
  "rich>=13.9.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "respx>=0.22.0",
  "coverage>=7.6.0"
]

[project.scripts]
vault = "vaultcord.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["vaultcord"]

[tool.coverage.report]
show_missing = true
skip_covered = true
